template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "storageaccountname": {
           "type": "string",
           "metadata": {
                "description": "name of the storage account"
            }
        },
        "location": {
           "type": "string",
           "metadata": {
                "description": "location of the storage account"
            }
        },
        "virtualnetwork": {
           "type": "string",
           "metadata": {
                "description": "name of the virtual network"
            }
        },
        "windowsvm": {
           "type": "string",
           "metadata": {
                "description": "virtual machine"
            }
        },
        "adimiusername": {
           "type": "string",
           "metadata": {
                "description": "name of the adimne"
            }
        },
        "adminpassword": {
           "type": "string",
           "metadata": {
                "description": "password"
            }
        }
    },
    "variables": {
        "tags": {
            "createdby" : "ravindra",
            "client" : "tcs",
            "owner" : "chinna"
        },
        "frantendsubnet1": "subnet1",
        "backendsubnet2": "subnet2",
        "publicip": "pip",
        "networkinterfacecard": "nic",
        "networksecuritygroup": "nsg"
    },
    "resources": [
        {
            "name": "[toLower(parameters('storageaccountname'))]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2015-06-15",
            "location": "[parameters('location')]",
            "tags": "[variables('tags')]",
            "properties": {
                "accountType": "Standard_LRS"
            }
        },
        {
            "name": "[parameters('virtualnetwork')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
             "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networksecuritygroup'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('frantendsubnet1')]",
                        "properties": {
                            "addressPrefix": "10.0.0.0/27",
                            "networkSecurityGroup": {
                             "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networksecuritygroup'))]"
                        }
                        }
                    },
                    {
                        "name": "[variables('backendsubnet2')]",
                        "properties": {
                            "addressPrefix": "10.0.0.32/27"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('publicip')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "dnsSettings": {
                    "domainNameLabel": "dnsname1"
                }
            }
        },
        {
            "name": "[variables('networkinterfacecard')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicip'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualnetwork'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualnetwork'),variables('frantendsubnet1'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('networksecuritygroup')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                                        {
                        "name": "HTTP",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
         "type": "Microsoft.Compute/disks",
         "apiVersion": "2018-06-01",
          "name": "[concat(parameters('windowsvm'),'-datadisk1')]",
          "location": "[resourceGroup().location]",
          "sku": {
             "name": "Standard_LRS"
          },
          "properties": {
          "creationData": {
            "createOption": "Empty"
          },
          "diskSizeGB": 10
        }
        },
        {
            "name": "[parameters('windowsvm')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', toLower(parameters('storageaccountname')))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('networkinterfacecard'))]",
                "[resourceId('Microsoft.Compute/disks/', concat(parameters('windowsvm'),'-datadisk1'))]"
            ],
            "tags": "[variables('tags')]",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS2_V2"
                },
                "osProfile": {
                    "computerName": "windowsVM1",
                    "adminUsername": "[parameters('adimiusername')]",
                    "adminPassword": "[parameters('adminpassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2019-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "windowsVM1OSDisk",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    },
                    "dataDisks": [
                    {
                    "lun": 0,
                    "name": "[concat(parameters('windowsvm'),'-datadisk1')]",
                    "createOption": "attach",
                    "managedDisk": {
                        "id": "[resourceId('Microsoft.Compute/disks/', concat(parameters('windowsvm'),'-datadisk1'))]"
                    }
                    }
                    ]
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkinterfacecard'))]"
                        }
                    ]
                }
            }
        }
    ],
    "outputs": {}
}
